--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,4 +1,4 @@
-### This is a test line if my code-server git functions.
+### This is a test line if my code-server git functions...
 
 
 # Set modifier key to win
